# StupidPainter

./: Makefile.am  README.md  StupidPainter.cpp  configure.ac  test.sh
